initial commit of full ipython notebook

--- a/ml_and_sims.ipynb
+++ b/ml_and_sims.ipynb
@@ -7243,6 +7243,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random forests. A good reference: http://www.stat.berkeley.edu/~breiman/RandomForests/cc_home.htm. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -15560,14 +15567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random forests. A good reference: http://www.stat.berkeley.edu/~breiman/RandomForests/cc_home.htm. Better than decision trees. Slower. The most important features are also plotted. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Extra Trees Regression. Similar to random forests. Does the best. Fairly quick. Feature importance is plotted again. A good reference: P. Geurts, D. Ernst., and L. Wehenkel, “Extremely randomized trees”, Machine Learning, 63(1), 3-42, 2006. "
+    "Extra Trees Regression. Similar to random forests. Does the best. Fairly quick. A good reference: P. Geurts, D. Ernst., and L. Wehenkel, “Extremely randomized trees”, Machine Learning, 63(1), 3-42, 2006. "
    ]
   },
   {
