--- a/ml_and_sims.ipynb
+++ b/ml_and_sims.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wget query to extract the relevant data from Millennium. This won't run since a username and a password haven't been supplied. The resulting data file is in the github repository ('data.csv'). The data extraction is thoroughly described in the paper. "
+    "Ugly wget query to extract the relevant data from Millennium (i.e. track the main branch of each subhalo and extract internal halo properties). This won't run since a username and a password haven't been supplied; one can request a username/password from http://www.mpa-garching.mpg.de/millennium/. The resulting data file is in the github repository ('data.csv'). The data extraction is thoroughly described in the paper. The data files in the repository are split into 7 files because of the github file size limit. "
    ]
   },
   {
@@ -29638,14 +29638,13 @@
     "\n",
     "report(grid_search.grid_scores_)\n",
     "'''\n",
-    "'''\n",
     "etree = ExtraTreesRegressor(n_estimators=700, min_samples_split=5, n_jobs=-1)\n",
     "etree.fit(H_train, M_train)\n",
     "M_pred_etree = etree.predict(H_test)\n",
     "\n",
     "mse_etree = mse(M_test, M_pred_etree)\n",
     "del etree\n",
-    "'''\n",
+    "\n",
     "print('MSE using Extra Trees for predicting the stellar mass is %f, cold gas mass is %f, bulge mass is %f, hot gas mass is %f, cooling radius is %f and black hole mass is %f\\n' % (mse_etree[0], mse_etree[1], mse_etree[2], mse_etree[3], mse_etree[4], mse_etree[5]))\n",
     "\n",
     "factors = base_mse/mse_etree\n",
@@ -29663,11 +29662,11 @@
     "\n",
     "C_train = np.ravel(C_train)\n",
     "C_test = np.ravel(C_test)\n",
-    "'''\n",
+    "\n",
     "etree = ExtraTreesRegressor(n_estimators=700, n_jobs=-1, min_samples_split=5)\n",
     "etree.fit(N_train, C_train)\n",
     "C_pred_etree = etree.predict(N_test)\n",
-    "'''\n",
+    "\n",
     "mse_etree_mod = mse(C_test,C_pred_etree)\n",
     "\n",
     "print('MSE using Extra Trees for predicting the cold gas mass including the baryonic inputs is %f' % mse_etree_mod)\n",
