--- a/ml_and_sims.ipynb
+++ b/ml_and_sims.ipynb
@@ -44,7 +44,6 @@
     "import seaborn as sns\n",
     "import time\n",
     "import math\n",
-    "from IPython.display import Latex\n",
     "%matplotlib inline\n",
     "\n",
     "sns.set_style(\"white\")\n",
@@ -29680,17 +29679,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welp. This is great. Using G11 to train the machine learning algorithms, the total stellar mass, stellar mass in the bulge, cold gas mass and hot gas mass in the Millennium simulation are predicted fairly robustly. ML provides a powerful framework to explore the problem of galaxy formation in part due to its relative simplicity, computational efficiency and its ability to model complex physical relationships. "
+    "Welp. This is great. Using G11 to train the machine learning algorithms, the total stellar mass, stellar mass in the bulge, cold gas mass and hot gas mass in the Millennium simulation are predicted fairly robustly. ML provides a powerful framework to explore the problem of galaxy formation in part due to its relative simplicity, computational efficiency and its ability to model complex physical relationships. A more thorough discussion of the physics and such is in the paper ('paper/main.pdf'). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
