stuff's still out of order eugh

--- a/ml_and_sims.ipynb
+++ b/ml_and_sims.ipynb
@@ -29679,8 +29679,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Welp. This is great. Using G11 to train the machine learning algorithms, the total stellar mass, stellar mass in the bulge, cold gas mass and hot gas mass in the Millennium simulation are predicted fairly robustly. ML provides a powerful framework to explore the problem of galaxy formation in part due to its relative simplicity, computational efficiency and its ability to model complex physical relationships. A more thorough discussion of the physics and such is in the paper ('paper/main.pdf'). "
+    "Eep. $\\textbf{This is great}$. Using G11 to train the machine learning algorithms, the total stellar mass, stellar mass in the bulge, cold gas mass and hot gas mass in the Millennium simulation are predicted fairly robustly. ML provides a powerful framework to explore the problem of galaxy formation in part due to its relative simplicity, computational efficiency and its ability to model complex physical relationships. A more thorough discussion of the physics and such is in the paper ('paper/main.pdf'). The results shown above demonstrably place machine learning as a promising analysis tool in the galaxy-halo connection and cosmological simulations, in general. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
